# chatgpt2api

./: .gitignore  .lintstagedrc.json  .stylelintrc.json  README.md  ROADMAP.md  config.example.toml  index.html  oxlint.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml  release-desktop.yml  release-homebrew.yml  release-npm.yml
docs/: compatibility.md  distribution-matrix.md  installation.md  security.md
npm/chatgpt2api/: README.md  package.json
npm/chatgpt2api/scripts/: postinstall.js
packaging/homebrew/: generate-formula.ts
scripts/: verify-release-artifacts.ts
src/: App.vue  main.ts  theme.test.ts  theme.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: pilot.json
src-tauri/icons/: icon.icns
src-tauri/src/: app_state.rs  auth.rs  cli.rs  commands.rs  config.rs  error.rs  image.rs  lib.rs  main.rs  models.rs  oauth.rs  rate_limits.rs  reasoning.rs  server.rs  session.rs  sse.rs  tools.rs  transform.rs  upstream.rs
src-tauri/src/api/: health.rs  images.rs  mod.rs  openai.rs  responses_ws.rs
src-tauri/tests/: api_health.rs  api_images.rs  api_openai.rs  api_responses_ws.rs  auth.rs  cli.rs  commands.rs  config.rs  models.rs  session.rs  sse.rs  transform.rs  upstream.rs
src/api/: tauri.ts
src/components/: AccountPanel.vue  ImagePanel.vue  LogPanel.vue  ModelPanel.vue  ServerPanel.vue
src/i18n/: en.ts  index.ts  locale.test.ts  locale.ts  zh.ts
src/router/: index.ts
src/stores/: app.ts
src/styles/: theme.css
tests/: homebrew_formula.test.ts  npm_package.test.ts  release_artifacts.test.ts
tests/e2e/: fake-upstream.ts  images.test.ts  openai.test.ts  responses-ws.test.ts
